<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/kone"
    tools:context="com.example.maor.elevators.Activity.HomeActivity">


    <Button
        android:id="@+id/add_new_elevator"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_new_elevator"
        android:layout_centerHorizontal="true"
        />
    <Button
        android:id="@+id/update_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update_data"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/add_new_elevator"
        />

    <Button
        android:id="@+id/list_of_elevators"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/list_of_elevators"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/update_data"
        />

    <Button
        android:id="@+id/date_of_checks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_of_checks"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/list_of_elevators"
        />


</RelativeLayout>
